fix: adjust separator spacing for NVDA

--- a/src/assets/styles/common/_todo.scss
+++ b/src/assets/styles/common/_todo.scss
@@ -13,5 +13,6 @@ input[type="file"] > input[type="button"]::-moz-focus-inner {
 }
 
 .separator {
+	padding-left: 0.325em;
 	vertical-align: super;
 }
